# vflow

./: INSTALL.md  README.md  pyproject.toml
src/vflow/: __init__.py  cli.py  detect.py
src/vflow/template_claude/: settings.json
src/vflow/template_claude/commands/: quick.md
src/vflow/template_claude/commands/vflow/: commit.md  context.md  go.md  init.md  quick.md  task.md
src/vflow/template_claude/skills/vflow-quick/: SKILL.md
src/vflow/template_claude/skills/vflow-review/: SKILL.md
src/vflow/template_claude/skills/vflow-spec/: SKILL.md
src/vflow/template_claude/skills/vflow-task/: SKILL.md
src/vflow/template_claude/skills/vflow-test/: SKILL.md
src/vflow/template_vflow/: config.json  workflow.md
src/vflow/template_vflow/scripts/: inject.py  task.py
src/vflow/template_vflow/skills/vflow-brainstorm/: SKILL.md
src/vflow/template_vflow/skills/vflow-code/: SKILL.md
src/vflow/template_vflow/skills/vflow-debug/: SKILL.md
src/vflow/template_vflow/skills/vflow-docs/: SKILL.md
src/vflow/template_vflow/skills/vflow-meta/: SKILL.md
src/vflow/template_vflow/skills/vflow-quick/: SKILL.md
src/vflow/template_vflow/skills/vflow-review/: SKILL.md
src/vflow/template_vflow/skills/vflow-spec/: SKILL.md
src/vflow/template_vflow/skills/vflow-task/: SKILL.md
src/vflow/template_vflow/spec/: index.md
src/vflow/template_vflow/tasks/: quick-log.md
src/vflow/template_vflow/templates/: design.md  plan.md  quick-entry.md  requirement.md  verify.md
tests/: conftest.py  test_cli_hooks.py  test_exec.py  test_states.py  test_trace.py
(+11 files in other folders)
